# SV2

./: .gitignore  CMakeLists.txt  README.md  surround_plugin.h
surround_visualizer/: surround_plugin.cpp  surround_plugin.h
surround_visualizer/include/Surround_Visualizer/: JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  SampleFifo.h  SharedMemoryBridge.h  SpectrumVisualizerComponent.h  SurroundVisualizerComponent.h
surround_visualizer/source/: JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp  SpectrumVisualizerComponent.cpp  SurroundVisualizerComponent.cpp
